[gd_scene format=3 uid="uid://qsbc2kitpjnm"]

[ext_resource type="Script" uid="uid://du6iuqyb28yot" path="res://player/bear/bear.gd" id="1_kasil"]
[ext_resource type="Texture2D" uid="uid://c123jvepjbueu" path="res://player/bear/bear.png" id="2_oahmb"]
[ext_resource type="Script" uid="uid://b5nu2xryxfo4m" path="res://hitbox/hitbox_oneshot.gd" id="3_34d8p"]
[ext_resource type="Script" uid="uid://d4ipkk1w7rjan" path="res://hitbox/hitbox_enter.gd" id="3_kasil"]
[ext_resource type="Script" uid="uid://ca4ihn4jasw5t" path="res://hurtbox/hurtbox.gd" id="4_e4bqr"]
[ext_resource type="AudioStream" uid="uid://1i38r234kdns" path="res://sound/sfx/walk.wav" id="6_4rdsq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oahmb"]
size = Vector2(110, 110)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o582p"]
size = Vector2(183.875, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mc37p"]
size = Vector2(44, 60)

[sub_resource type="Gradient" id="Gradient_kasil"]
offsets = PackedFloat32Array(0, 0.60677963, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.21694915, 0.21694915, 0.21694915, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4rdsq"]
gradient = SubResource("Gradient_kasil")
fill = 2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kasil"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(82.395, 22.64, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -228.59999
angle_max = 210.30002
spread = 180.0
initial_velocity_max = 60.32
gravity = Vector3(0, 0, 0)
scale_min = 0.049999997
scale_max = 0.14999999

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elce3"]
size = Vector2(50, 66.5)

[sub_resource type="Animation" id="Animation_m2xkb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/Player:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_oahmb"]
resource_name = "atk_1"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/Player:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5707964, 3.1415927, 4.712389, 6.2831855]
}

[sub_resource type="Animation" id="Animation_o582p"]
resource_name = "atk_2"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_3x0x8"]
resource_name = "die"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"sig_dead"
}]
}

[sub_resource type="Animation" id="Animation_mc37p"]
resource_name = "fall"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_0m1qi"]
resource_name = "hurt"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_ed10k"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/Player:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_oo5da"]
resource_name = "rise"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_br3bc"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m2xkb"]
_data = {
&"RESET": SubResource("Animation_m2xkb"),
&"atk_1": SubResource("Animation_oahmb"),
&"atk_2": SubResource("Animation_o582p"),
&"die": SubResource("Animation_3x0x8"),
&"fall": SubResource("Animation_mc37p"),
&"hurt": SubResource("Animation_0m1qi"),
&"idle": SubResource("Animation_ed10k"),
&"rise": SubResource("Animation_oo5da"),
&"run": SubResource("Animation_br3bc")
}

[node name="Bear" type="CharacterBody2D" unique_id=308110839]
collision_layer = 2
script = ExtResource("1_kasil")

[node name="Graphic" type="Node2D" parent="." unique_id=1949678870]
unique_name_in_owner = true

[node name="Player" type="Sprite2D" parent="Graphic" unique_id=2073678715]
position = Vector2(0, -43)
texture = ExtResource("2_oahmb")
hframes = 4
vframes = 6

[node name="Hitbox1" type="Area2D" parent="Graphic" unique_id=1077463600]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 64
monitoring = false
monitorable = false
script = ExtResource("3_kasil")
damage = 12.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphic/Hitbox1" unique_id=1892970504]
position = Vector2(0, -38)
shape = SubResource("RectangleShape2D_oahmb")

[node name="Hitbox2" type="Area2D" parent="Graphic" unique_id=952348204]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 64
monitoring = false
monitorable = false
script = ExtResource("3_34d8p")
damage = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphic/Hitbox2" unique_id=199489792]
position = Vector2(104.0625, -43.5)
shape = SubResource("RectangleShape2D_o582p")

[node name="Hurtbox" type="Area2D" parent="Graphic" unique_id=1265264648]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 32
script = ExtResource("4_e4bqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphic/Hurtbox" unique_id=1375015080]
position = Vector2(0, -31)
shape = SubResource("RectangleShape2D_mc37p")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Graphic" unique_id=1007609451]
unique_name_in_owner = true
position = Vector2(114, -43)
emitting = false
amount = 300
texture = SubResource("GradientTexture2D_4rdsq")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_kasil")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1403986926]
position = Vector2(0, -33.75)
shape = SubResource("RectangleShape2D_elce3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=146775931]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_m2xkb")
autoplay = &"idle"

[node name="TimerInvincible" type="Timer" parent="." unique_id=1209449918]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=178488586]
unique_name_in_owner = true
stream = ExtResource("6_4rdsq")

[connection signal="get_damage" from="Graphic/Hurtbox" to="." method="_on_hurtbox_get_damage"]
[connection signal="timeout" from="TimerInvincible" to="." method="_on_timer_invincible_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
